# foxcross

./: .appveyor.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  404.html  CONTRIBUTING.md  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
advanced-usage/: index.html
contributing/: index.html
docs/: CNAME  advanced-usage.md  contributing.md  full-examples.md  index.md  pandas-serving.md  release-notes.md  serving.md
foxcross/: __init__.py  base_serving.py  constants.py  endpoints.py  enums.py  exceptions.py  filters.py  pandas_serving.py  run_serving.py  runner.py  serving.py  templates.py
foxcross/templates/: base.html  data_format_form.html  download_input_format.html  download_predict_test.html  endpoint.html  index.html  input_format.html  predict.html  predict_test.html
full-examples/: index.html
pandas-serving/: index.html
release-notes/: index.html
scripts/: check_version_bumped.py  deploy.sh  validate_version.py  validate_version.sh
search/: search_index.json
serving/: index.html
tests/: test_canary.py  test_failed_serving.py  test_modin_extra.py  test_no_extra.py  test_pandas_extra.py  test_pandas_serving.py  test_performance_extra.py  test_serving.py  test_ujson_extra.py
tests/data/: add_five.json  add_five_result.json  add_one_result.json  interpolate.json  interpolate_multi_frame.json  interpolate_multi_frame_result.json  interpolate_result.json
