[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "foxcross"
version = "0.10.0"
description = "AsyncIO serving for data science models"
authors = ["Steven Pate <steven@laac.dev>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/laactech/foxcross"
documentation = "https://www.foxcross.dev/"
keywords = [
    "data science",
    "machine learning",
    "serving",
    "python",
    "async",
    "dataframe",
    "pandas",
    "scikit-learn",
    "pytorch",
    "http",
    "rest api"
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Environment :: Web Environment",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.6.1"
python-slugify = {version = "^4.0", extras = ["unidecode"]}
aiofiles = "^0.5.0"
jinja2 = "^2.10"
ujson = {version = "^2.0", optional = true}
modin = {version = "^0.7.0", optional = true}
pandas = {version = "^1.0.0", optional = true}
uvicorn = "^0.11.0"
starlette = "^0.13.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.0"
mkdocs = "^1.0"
mkdocs-material = "^5.0"
pytest = "^5.0"
pygments = "^2.4"
pymdown-extensions = "^7.0"
requests = "^2.22"
pytest-cov = "^2.7"
tomlkit = "^0.6.0"
ray = { version = "^0.8.4", markers = "sys_platform != 'win32'" }
pyarrow = { version = "^0.17.0", markers = "sys_platform != 'win32'" }

[tool.poetry.extras]
modin = ["modin"]
ujson = ["ujson"]
pandas = ["pandas"]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
